# rdma_client

./: CMakeLists.txt
playground/: CMakeLists.txt
playground/double_buf_get/: 1double_buf_get.cpp  32get.cpp  CMakeLists.txt  bf.cpp  csv.cpp  double_buf_get.cpp  double_micro_test.cpp  no_han_double_micro_test.cpp  settings.h
playground/double_change/: 16.cpp  1b_load_dummy.cpp  1b_unif.cpp  1b_zipf.cpp  CMakeLists.txt  bfzip.cpp  generator.h  handle.cpp  no_han_double_micro_test.cpp  settings.h  test.cpp  tracer.h  zipf.cpp
playground/double_insert/: 384.cpp  77.cpp  98_test.cpp  CMakeLists.txt  buf.cpp  double_micro_test.cpp  han_no_recv.cpp  han_recv.cpp  han_time.cpp  settings.h  tracer.h
playground/double_microtest/: CMakeLists.txt  bf.cpp  double_micro_test.cpp  send_recv.cpp  settings.h
playground/get_batch/: CMakeLists.txt  get_batch_test.cpp  hash.h  settings.h
playground/microtest/: CMakeLists.txt  Connection.h  get_simple_test.cpp  micro_test  micro_test.cpp  settings.h
playground/mix_read_update/: 1Connection.h  1b_unif.cpp  1double_micro_test.cpp  2setting.h  32run.cpp  CMakeLists.txt  bf.h  double_buf_get.cpp  han_double_micro_test.cpp  init_double_buf_get.cpp  jhash.h  settings.h  test_hash.cpp  zipf.cpp
playground/server/: 1server.cpp  1server_define.h  2server.cpp  9server_define.h  CMakeLists.txt  README.md  assoc.cpp  assoc.h  bf.cpp  bf_server.cpp  bf_server_define.h  handle_server.cpp  handle_server_define.h  kvobj.cpp  kvobj.h  no_sort_server.cpp  server.cpp  server_define.h  settings.h  simple_test.cpp  single_server.cpp  sort.cpp  sort_server.cpp  time_server.cpp
(+86 files in other folders)
