add_subdirectory(sum_store-dir)
add_subdirectory(microtest)
add_subdirectory(get_batch)
add_subdirectory(server)
add_subdirectory(double_buf_get)
add_subdirectory(double_microtest)
add_subdirectory(double_change)
add_subdirectory(double_insert)
add_subdirectory(zipf_update)
add_subdirectory(mix_read_update)
